fix scrollbar color

--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -5,7 +5,7 @@
 @namespace url("http://www.w3.org/1999/xhtml");
 
 :root {
-    scrollbar-color: #222 #444 !important;
+    scrollbar-color: #111 #333 !important;
     scrollbar-width: thin !important;
 }
 
